Fixed menu align

--- a/blog/static/css/main.css
+++ b/blog/static/css/main.css
@@ -18,10 +18,10 @@ ul, ol, li {
 .center {
   margin-left: auto;
   margin-right: auto;
-
+  text-align: center;
 }
 
-.clearfix{
+.clearfix::after{
   clear:both;
 }
 
@@ -65,13 +65,16 @@ ul, ol, li {
 }
 
 .links {
-  width:20%;
-  display: inline-block;
-  vertical-align: middle;
+  width:200px;
+
+  /* display: inline-block; */
+  /* vertical-align: middle;
+  text-align: center; */
 }
 
 .links li{
-  float:left;
+  /* float:right; */
+  display: inline-block;
   list-style: none;
   margin-right: 10px;
   /* margin-top: 10px; */
